test/data/syntax-errors/foreachloop-missing-iterable.ava
for each x in { x++; };